--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dropdown</title>
-</head>
-<body>
-<select name= colours method="GET" action="/">
-    {% for colour in colours %}
-    <option value= "{{colour}}" SELECTED>{{colours}}</option>"
-    {% endfor %}
-</select>
-
-</select>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Covid19</title>
+    </head>
+    <body>
+        <div>
+            <select name= colours method="GET" action="/">
+                {% for colour in colours %}
+                <option value= "{{colour}}" SELECTED>{{colours}}</option>"
+                {% endfor %}
+            </select>
+        </div>
+        <div>
+            <head>covid results {heading:}</head><body><table><tr><td>Select state </td></tr>{select:}{innerHTMLS:}</table></body>
+        </div
+    </select>
+    </body>
 </html>
