--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,7 +13,7 @@
             </select>
         </div>
         <div>
-            <head>covid results {{heading}}</head><body><table><tr><td>Select state </td></tr>{{select}}{{innerHTMLS}}</table></body>
+            <head>covid results {heading}</head><body><table><tr><td>Select state </td></tr>{select}{innerHTMLS}</table></body>
         </div
     </select>
     </body>
