--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Covid19</title>
+        <title>Covid19 Results</title>
     </head>
     <body>
         <div>
@@ -21,7 +21,7 @@
             </tr>
         </table>
         <div>
-            <head>covid results {heading}</head><body><table><tr><td>Select state </td></tr>{select}{innerHTMLS}</table></body>
+            COVID 19 Results
         </div
     </select>
     </body>
