--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-            <select name= states method="GET" action="/state">
+            <select name="states" method="GET" action="/state">
                 
                 {% for covids in data['statewise'] %}
                     <option value= "{{covids['statecode']}}">{{covids['state']}}</option>
