--- a/templates/statewise.html
+++ b/templates/statewise.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta http-equiv='refresh' content='5' />
         <meta charset="UTF-8">
         <title>Covid19 Results</title>
     </head>
